Trying to fix a bug on mobile screen

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -387,7 +387,7 @@ body {
 /* mobile view */
 @media (max-width: 600px) {
     body {
-        background-position: calc(100% + 250px);
+        /* background-position: calc(100% + 250px); */
     }
 
     .heading-container h1 {
@@ -433,6 +433,6 @@ body {
 
 @media (max-width: 435px) {
     body {
-        background-position: calc(100% + 275px);
+        /* background-position: calc(100% + 275px); */
     }
 }
